[Nikhil] #UI - Fixed minor Alignment issue of the remarks in the cabpool slate.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1523,10 +1523,6 @@ label.required:after {
   }
 }
 
-.cabpool-remarks {
-  font: inherit;
-}
-
 .user-profile-link {
   color: $dark;
   i {
